# SpriteSplitter

./: .gitignore  main.py  pyproject.toml
docs/: design.drawio  result.md  usage.md
tests/: edge_start_finder_test.py  single_sprite_test.py
