[project]
name = "sprite-splitter"
version = "0.0.1"
authors = [
  { name="Binimation" },
]
description = "A sprite image splitter for rgba format image."
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"